[package]
name = "librarian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["serde_derive"] }
schemars = "0.8.16"
serde_json = "1.0.114"